# fcitx5-table-other

./: AUTHORS  CMakeLists.txt  Messages.sh  README  org.fcitx.Fcitx5.Addon.TableOther.metainfo.xml.in  org.fcitx.fcitx5-table-other.metainfo.xml.in
.github/workflows/: check.yml
icons/: CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  POTFILES.in.in  am.po  ar.po  bn.po  ca.po  da.po  de.po  fcitx-table-other.pot  fcitx5-table-other.pot  fr.po  gu.po  he.po  hi.po  ja.po  ka.po  kn.po  ko.po  ml.po  ne.po  pa.po  ru.po  ta.po  te.po  th.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
tables/: CMakeLists.txt  cns11643.conf.in  cns11643.txt  compose.txt  ipa-x-sampa.txt  latex.txt  rustrad.conf.in  rustrad.txt  thai.conf.in  thai.txt  translit-ua.txt  translit.txt  viqr.txt  yawerty.conf.in  yawerty.txt
tables/am/: amharic.conf.in  amharic.txt
tables/ar/: arabic.conf.in  arabic.txt
tables/bn/: bengali-inscript.conf.in  bengali-inscript.txt  bengali-probhat.conf.in  bengali-probhat.txt
tables/ett/: etruscan.conf.in  etruscan.txt
tables/gu/: gujarati-inscript.conf.in  gujarati-inscript.txt  gujarati-phonetic.conf.in  gujarati-phonetic.txt
tables/he/: hebrew.conf.in  hebrew.txt
tables/hi/: hindi-inscript.conf.in  hindi-inscript.txt  hindi-phonetic.conf.in  hindi-phonetic.txt
tables/kn/: kannada-inscript.conf.in  kannada-inscript.txt  kannada-kgp.conf.in  kannada-kgp.txt
tables/ml/: malayalam-inscript.conf.in  malayalam-inscript.txt  malayalam-phonetic.conf.in  malayalam-phonetic.txt
tables/ne/: nepali-rom.conf.in  nepali-rom.txt  nepali-trad.conf.in  nepali-trad.txt
tables/other/: cns11643.conf.in  cns11643.txt  compose.conf.in  compose.txt  emoji.conf.in  emoji.txt  ipa-x-sampa.conf.in  ipa-x-sampa.txt  latex.conf.in  latex.txt
tables/pa/: punjabi-inscript.conf.in  punjabi-inscript.txt  punjabi-jhelum.conf.in  punjabi-jhelum.txt  punjabi-phonetic.conf.in  punjabi-phonetic.txt
tables/phn/: phoenician.conf.in  phoenician.txt
tables/ru/: rustrad.conf.in  rustrad.txt  translit-ua.txt  translit.conf.in  translit.txt  yawerty.conf.in  yawerty.txt
tables/ta/: tamil-inscript.conf.in  tamil-inscript.txt  tamil-phonetic.conf.in  tamil-phonetic.txt  tamil-remington.conf.in  tamil-remington.txt
tables/te/: telugu-inscript.conf.in  telugu-inscript.txt
tables/th/: thai.conf.in  thai.txt
tables/uk/: translit-ua.conf.in  translit-ua.txt  ukrainian-translit.conf.in  ukrainian-translit.txt
tables/vi/: viqr.conf.in  viqr.txt
tables/zgh/: tifinagh.conf.in  tifinagh.txt
